Finally matched casing of keys and it all workw

--- a/ASPTraining/Views/Improvements/Delete.cshtml
+++ b/ASPTraining/Views/Improvements/Delete.cshtml
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Status)
+            @Html.DisplayFor(model => model.Status.Description)
         </dd>
 
     </dl>
