--- a/ASPTraining/Views/Improvements/Index.cshtml
+++ b/ASPTraining/Views/Improvements/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ASPTraining.Models.Improvement>
+﻿@model IEnumerable<ASPTraining.Models.IImprovement>
 
 @{
     ViewBag.Title = "Index";
