--- a/ASPTraining/Views/Improvements/Details.cshtml
+++ b/ASPTraining/Views/Improvements/Details.cshtml
@@ -4,9 +4,13 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
 <div>
+    
+    <div class="pull-right">
+        @Html.ActionLink("Create New", "Create")
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ID })
+    </div>
     <h4>Improvement</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -25,9 +29,8 @@
         <dd>
             @Html.DisplayFor(model => model.Status.Description)
         </dd>
-
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID })
+    
 </p>
