--- a/ASPTraining/Views/Improvements/Index.cshtml
+++ b/ASPTraining/Views/Improvements/Index.cshtml
@@ -4,18 +4,16 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 list-column">
         @foreach (var item in Model)
         {
-            <h3>@Html.ActionLink(item.Description, "Index", new { id = item.ID })</h3>
-            <p>@Html.DisplayFor(modelItem => item.Status.Description)</p>
+            <div class="list-item @(item.ID==ViewBag.SelectedId? "selected" :"")">
+                <h4>@Html.ActionLink(item.Description, "Index", new { id = item.ID })</h4>
+                <p>@Html.DisplayFor(modelItem => item.Status.Description)</p>
+            </div>
         }
     </div>
     <div class="col-md-9">
